# simcore

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh
src/: CMakeLists.txt  ecs.hpp  interface.hpp  main.cpp  schedule.cpp  schedule.hpp  tick.cpp  tick.hpp  types.hpp  util.hpp  vec3.hpp
